[package]
name = "nannig"
version = "0.1.0"
authors = ["othelarian <le.maitre.killian@gmail.com>"]
edition = "2018"

[dependencies]
gl = "0.14.0"
glutin = "0.23.0"
nanovg = {version = "1.0.2", features = ["gl3"]}

[dependencies.candelabre-core]
#git = "https://github.com/othelarian/candelabre.git"
path = "../candelabre/candelabre-core"

[dependencies.candelabre-windowing]
#git = "https://github.com/othelarian/candelabre.git"
path = "../candelabre/candelabre-windowing"
