[package]
name = "nannig"
version = "0.1.0"
authors = ["othelarian <le.maitre.killian@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.10"
#directories = ""
gl = "0.14.0"
glutin = "0.23.0"
nvg = "0.5.9"
nvg-gl = "0.5.4"

[dependencies.candelabre-core]
#git = "https://github.com/othelarian/candelabre.git"
path = "../candelabre/candelabre-core"

[dependencies.candelabre-windowing]
#git = "https://github.com/othelarian/candelabre.git"
path = "../candelabre/candelabre-windowing"
